[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.black]
include = '\.pyi?$'
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']


[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true


[tool.poetry]
authors = ['Sitt Guruvanich <aekasitt.g+github@siamintech.co.th>']
description = 'Command line interface used for generating local Lightning test environment'
include = [
  {path='src/constants.yml', format=['sdist', 'wheel']}
]
license = 'MIT'
name = 'aesir'
packages = [
  {include='src'},
  {include='core.py'}
]
readme = 'README.md'
version = '0.2.5'

[tool.poetry.dependencies]
APScheduler = '^3.10.4'
click = '^8.1.7'
docker = '^6.1.3'
pydantic = '^2.5.2'
python = '^3.8'
pyyaml = '^6.0.1'
rich = '^13.7.0'
types-pyyaml = '^6.0.12.12'

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = '^23.11.0'
mypy = '^1.7.1'
pytest = '^7.4.3'

[tool.poetry.scripts]
aesir = 'core:cli'
