[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']


[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.poetry]
authors = ['Sitt Guruvanich <aekasitt.g+github@siamintech.co.th>']
classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Intended Audience :: Financial and Insurance Industry',
  'License :: OSI Approved :: MIT License',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS 9',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: OS Independent',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3 :: Only',
  'Topic :: Office/Business :: Financial',
  'Topic :: Office/Business :: Financial :: Investment',
  'Topic :: Other/Nonlisted Topic',
  'Topic :: Security :: Cryptography',
]
description = 'Command line interface used for generating local Lightning test environment'
homepage = 'https://github.com/krutt/aesir'
include = [
  {path='src/aesir/schemas.yml', format=['sdist', 'wheel']}
]
keywords = ['anonymous', 'bitcoin', 'cashu', 'chaum', 'chaumian', 'cli', 'ecash', 'lightning']
license = 'MIT'
name = 'aesir'
packages = [{from='src', include='aesir'}]
readme = 'README.md'
repository = 'https://github.com/krutt/aesir'
version = '0.4.2'


[tool.poetry.dependencies]
APScheduler = '^3.10.4'
click = '^8.1.7'
docker = '^6.1.3'
pydantic = '^2.5.2'
python = '^3.8'
pyyaml = '^6.0.1'
rich = '^13.7.0'
types-pyyaml = '^6.0.12.12'


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
mypy = '^1.7.1'
pytest = '^7.4.3'
ruff = '^0.2.2'


[tool.poetry.scripts]
aesir = 'aesir.core:cli'


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py38'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401'] # Ignore unused imports
